--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": ".",
-    "slug": ".",
+    "name": "My app",
+    "slug": "my-app",
     "platforms": [
       "ios",
       "android",
